# thonny_exopy

./: CHANGELOG.md  MANIFEST.in  README.md  install tuto.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  thonnyplugin.py
.github/workflows/: python-publish.yml
src/thonny_exopy/: thonnyplugin.py
thonny_exopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
thonnycontrib/exopy/: __init__.py  config.ini
