[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thonny_exopy"
version = "0.1.0"
description = "Plugin Thonny NSI pour récupérer des exercices depuis une API avec aide IA"
authors = [
    { name = "Votre Nom", email = "votre.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "thonny>=4.1.4",
    "requests>=2.27.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.entry-points."thonny.plugins"]
exopy = "thonny_exopy.thonnyplugin"

