[metadata]
name = thonny_exopy
version = 0.1.0
description = Plugin Thonny NSI pour récupérer des exercices depuis une API avec aide IA
author = Votre Nom
author_email = votre.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    thonny>=4.1.4
    requests>=2.27.1

[options.entry_points]
thonny.plugins =
    exopy = thonny_exopy.thonnyplugin

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[tool.black]
line-length = 88
